<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="org.csystem.android.app.basicviews.viewmodel.RegisterInfo"/>
        <import type="org.csystem.android.app.basicviews.viewmodel.MainActivityListenersViewModel"/>
        <import type="android.widget.ArrayAdapter"/>
        <variable type="RegisterInfo" name="registerInfoViewModel" />
        <variable type="MainActivityListenersViewModel" name="mainActivityViewModel" />
        <variable type="String" name="confirmPassword" />
        <variable type="boolean" name="accept" />
        <variable type="String" name="result" />
        <variable type="int" name="dayPos" />
        <variable type="int" name="monthPos" />
        <variable type="int" name="yearPos" />
        <variable type="Object" name="show" />
        <variable type="int" name="passwordInputType" />
        <variable type="String" name="showPasswordButtonText" />
        <variable type="String" name="password" />
        <variable type="boolean" name="allowShowPasswordChecked" />
        <variable type="ArrayAdapter&lt;String&gt;" name="educationAdapter" />
        <variable type="int" name="educationSelectedPos" />
        <variable type="ArrayAdapter&lt;Integer&gt;" name="dayAdapter" />
        <variable type="ArrayAdapter&lt;String&gt;" name="monthAdapter" />
        <variable type="ArrayAdapter&lt;Integer&gt;" name="yearAdapter" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ToggleButton
            android:id="@+id/mainActivityToggleButtonOpen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOn="@string/toggle_button_on_text"
            android:textOff="@string/toggle_button_off_text"
            android:checked="true"
            android:onCheckedChanged="@{(_, checked) -> mainActivityViewModel.handleOpenToggleButton(checked)}" />

        <LinearLayout
            android:id="@+id/mainActivityLayoutRegisterInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/mainActivityEditTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@={registerInfoViewModel.name}"
                android:hint="@string/edittext_name_hint_text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@={registerInfoViewModel.email}"
                android:hint="@string/edittext_email_hint_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adapter="@{dayAdapter}"
                    android:selectedItemPosition="@={dayPos}" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adapter="@{monthAdapter}"
                    android:selectedItemPosition="@={monthPos}"
                    android:onItemSelected="@{(av, v, pos, i) -> mainActivityViewModel.handleBirthDateMonthSpinner(pos)}"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adapter="@{yearAdapter}"
                    android:selectedItemPosition="@={yearPos}"
                    android:onItemSelected="@{(av, v, pos, i) -> mainActivityViewModel.handleBirthDateYearSpinner(pos)}"
                    />

            </LinearLayout>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adapter="@{educationAdapter}"
                android:selectedItemPosition="@={educationSelectedPos}"
                android:onItemSelected="@{(av, v, pos, i) -> mainActivityViewModel.handleEducationSpinner(pos)}" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@={registerInfoViewModel.userName}"
                android:hint="@string/edittext_username_hint_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_weight="5"
                    android:inputType="@{passwordInputType}"
                    android:text="@={password}"
                    android:hint="@string/edittext_password_hint_text" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="2">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="@{show}"
                        android:onClick="@{() -> mainActivityViewModel.handleShowPasswordButton()}"
                        android:enabled="@{allowShowPasswordChecked}"
                        android:text="@{showPasswordButtonText}" />

                    <Switch
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/switch_show_button_enable"
                        android:checked="@={allowShowPasswordChecked}"
                        tools:ignore="UseSwitchCompatOrMaterialXml"
                        android:onCheckedChanged="@{(_, checked) -> mainActivityViewModel.handleAllowShowPasswordSwitch(checked)}"/>
                </LinearLayout>

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@={confirmPassword}"
                android:hint="@string/edittext_confirm_password_hint_text" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{accept}"
                android:onClick="@{() -> mainActivityViewModel.handleRegisterButton()}"
                android:text="@string/button_register_text" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@={accept}"
                android:text="@string/checkbox_accept_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{result}"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> mainActivityViewModel.handleClearButton()}"
                android:text="@string/button_clear_text" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> mainActivityViewModel.handleCloseButton()}"
            android:text="@string/button_close_text" />

    </LinearLayout>
</layout>

